--- a/index.html
+++ b/index.html
@@ -103,5 +103,9 @@
     </div>
     <div id="mask"></div>
     
+
+    <script src="./js/style.js"></script>
+    <script src="./js/common.js"></script>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
